objects/Opportunity_and_ROI__c.object
<CustomObject>
    <description>Object to contain elements of Value Stream service plans and ROI components</description>
    <fields>
        <fullName>Action_Required__c</fullName>
        <inlineHelpText>Outline the next steps agreed upon by the member</inlineHelpText>
        <label>Action Required</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AttachmentsROI__c</fullName>
        <inlineHelpText>Post a link to the (L:) Drive. L:\Public\Share\Crimson\Clinical Advantage\Opportunity Assessments by Member</inlineHelpText>
        <label>Attachments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <inlineHelpText>Post a link to the (L:) Drive. L:\Public\Share\Crimson\Clinical Advantage\Opportunity Assessments by Member</inlineHelpText>
        <label>Attachments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-541</description>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Baseline_Performance__c</fullName>
        <label>Baseline Performance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCC_Metric_Of_Interest__c</fullName>
        <description>CR-541</description>
        <label>CCC: Metric Of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>%30 Day Readmit (Any DRG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%30 Day Readmit (Same MDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%30 Day Readmit (Same DRG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%3 Day Readmit (Any DRG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%Complications of Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%Complications of Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortality Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO/ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHRQ PSIs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoidable Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consults Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS GMLOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk of Mortality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day of Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day of Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Disposition</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CMA_Case_Study_Pseudonym__c</fullName>
        <description>Created as part of CR 4343</description>
        <label>CMA: Case Study Pseudonym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMA_Initiative_Status__c</fullName>
        <label>CMA Initiative Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMA_Overview_and_Attachments__c</fullName>
        <label>Overview and Attachments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case_Study_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Study Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Study_Link__c</fullName>
        <description>CR-541</description>
        <label>Case Study Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Study_Roundtable_Feedback__c</fullName>
        <label>Case Study Roundtable Feedback</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case_Study_Status__c</fullName>
        <label>Case Study Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published Blinded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Use Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - Internal Use Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - Published Blinded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Internal Use Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Published Blinded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crimson_Labs_Consultation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-3987</description>
        <label>Crimson Labs Consultation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crimson_Labs_Contacts__c</fullName>
        <description>CR-3987</description>
        <label>Crimson Labs Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DRG_or_Patient_Population__c</fullName>
        <label>DRG or Patient Population</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRGs_of_Interest__c</fullName>
        <description>CR-541</description>
        <label>DRGs of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Major Joint Replacement (469-70)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Septicemia (870-2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Failure &amp; Shock (291-3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple Pneumonia (193-5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Fusion Except Cervical (460)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esoph Gastro &amp; Misc Dig Disords (391-2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perc Cardiovasc Proc W Stent (246-9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chronic Obst Pulmonary Dis (190-2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cellulitis (602-3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychoses (885)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maj Small &amp; Lrg Bowel Procs (329-31)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appendectomy (338-43)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dedicated_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Dedicated Advisor with primary responsibility for this value opportunity</inlineHelpText>
        <label>Dedicated Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EHBI_Value_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Does_ROI_Apply_To_A_Strategic_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20160503-9823.</description>
        <inlineHelpText>Please indicate if the ROI captured aligns with a stated strategic priority for your executive sponsor and if so, please indicate which priority. (i.e. Population Health Management, Cost Reduction, Market Share, etc).</inlineHelpText>
        <label>Does ROI Apply To A Strategic Priority?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Specialty__c</fullName>
        <description>CR-541</description>
        <label>Focus Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Hospitalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulmonology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephrology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB/GYN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_on_Single_Physician__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-541</description>
        <label>Focus on Single Physician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_on_Specialty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-541</description>
        <label>Focus on Specialty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Saved__c</fullName>
        <label>Hours Saved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_PC_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20140826-7138.</description>
        <label>Lead/PC/Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_and_ROI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Approved_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box once complete</inlineHelpText>
        <label>Member Approved Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Determines_Key_Stake_Holders__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box once complete</inlineHelpText>
        <label>Member Determines Key Stake Holders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Developed_Associated_Work_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box once complete</inlineHelpText>
        <label>Member Developed Associated Work Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Plans_for_Physician_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box once complete</inlineHelpText>
        <label>Member Plans for Physician Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Reviews_Progress_with_DA__c</fullName>
        <label>Member Reviews Progress with DA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Validated_Opportunity__c</fullName>
        <inlineHelpText>(MHI Required Field) Select the date on which this value opportunity is effective, such as the date a change to a benefits plan design occurs, a surgical schedule is adjusted, or a POS cash collection effort begins</inlineHelpText>
        <label>Member Validated Opportunity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_plans_for_physician__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box once complete</inlineHelpText>
        <label>Member Plans for Physician Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Members_Present__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Include all member contacts who reviewed the OA</inlineHelpText>
        <label>Members Present</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities and ROI (Members Present)</relationshipLabel>
        <relationshipName>Value_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metric_of_Interest__c</fullName>
        <label>Metric of Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA_File_Link__c</fullName>
        <description>CR-541</description>
        <inlineHelpText>Please copy your OA to the member’s folder on the L Drive before entering above file path.</inlineHelpText>
        <label>OA File Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OA_Files__c</fullName>
        <inlineHelpText>Upload a document here</inlineHelpText>
        <label>OA Files</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Assessment_Presented__c</fullName>
        <label>Opportunity Assessment Presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_First_Identified__c</fullName>
        <label>Opportunity First Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Service_Line__c</fullName>
        <description>created as part of CR 4343</description>
        <label>Opportunity Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>Cardio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gen Surg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>created as part of CR 4343</description>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_MS_DRGs__c</fullName>
        <description>CR-541</description>
        <inlineHelpText>Please type DRG number only here. If APR-DRG, please specify with an “APR” prefix.</inlineHelpText>
        <label>Other MS-DRGs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Opportunities_Prioritized_by_Membe__c</fullName>
        <inlineHelpText>Include the top three other opportunities discovered and prioritized by the member as actionable in the future but not at this time period.</inlineHelpText>
        <label>Other Opps Prioritized by Member</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Opps_Prioritized_by_Member__c</fullName>
        <inlineHelpText>Include the top three other opportunities discovered and prioritized by the member as actionable in the future but not at this time period.</inlineHelpText>
        <label>Other Opps Prioritized by Member</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Primary_DRGs__c</fullName>
        <description>CR-541</description>
        <label>Other Primary DRGs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_2_Launch__c</fullName>
        <formula>Opportunity_Assessment_Presented__c + 28</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 2 Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_3_Launch__c</fullName>
        <formula>Opportunity_Assessment_Presented__c + 56</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 3 Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_4_Launch__c</fullName>
        <formula>Opportunity_Assessment_Presented__c + 140</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 4 Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_ID_or_Group__c</fullName>
        <label>Physician ID or Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Name_or_ID__c</fullName>
        <description>CR-541</description>
        <label>Physician Name or ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pod_Feedback__c</fullName>
        <label>Pod Feedback</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <description>CR-541</description>
        <label>CCC/RIC: Primary Category</label>
        <picklist>
            <picklistValues>
                <fullName>Readmissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortalities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Measures/PSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Length of Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilization (Non-LOS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking/Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Opportunity Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort Benchmarking Comparison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Summit Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Requested Analysis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_DRGs__c</fullName>
        <label>Primary DRGs</label>
        <picklist>
            <picklistValues>
                <fullName>Major Joint Replacement (469-70)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Septicemia (870-2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Failure &amp; Shock (291-3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple Pneumonia (193-5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Fusion Except Cervical (460)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esoph Gastro &amp; Misc Dig Disords (391-2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perc Cardiovasc Proc W Stent (246-9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chronic Obst Pulmonary Dis (190-2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cellulitis (602-3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychoses (885)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maj Small &amp; Lrg Bowel Procs (329-31)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appendectomy (338-43)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Metric__c</fullName>
        <description>CR-541</description>
        <label>Primary Metric</label>
        <picklist>
            <picklistValues>
                <fullName>%30 Day Readmit (Any DRG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%30 Day Readmit (Same MDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%30 Day Readmit (Same DRG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%3 Day Readmit (Any DRG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%Complications of Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%Complications of Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortality Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO/ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHRQ PSIs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoidable Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consults Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS GMLOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk of Mortality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day of Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day of Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Disposition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Change_Details__c</fullName>
        <inlineHelpText>Outline each step taken by member to convert opportunity into ROI.</inlineHelpText>
        <label>Process Change Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Project__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunity and ROI</relationshipLabel>
        <relationshipName>EHBI_Service_Plan_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qualitative_Results__c</fullName>
        <inlineHelpText>Where a dollar amount may not exist but ROI is achieved, detail the improvement</inlineHelpText>
        <label>Qualitative Results?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quality_Improvement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if applicable</inlineHelpText>
        <label>Quality Improvement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Category__c</fullName>
        <description>Created for CR-20150623-9022.</description>
        <label>ROI Category</label>
        <picklist>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Experience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROI_Dollar_Amount__c</fullName>
        <inlineHelpText>(MHI Required, Value greater than $2)</inlineHelpText>
        <label>Value of ROI Realized</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI_End_Date__c</fullName>
        <description>Created for CR-20160503-9823.</description>
        <inlineHelpText>The last possible date for which ROI is captured prior to asking member for sign-off. The ROI start and end date will be used to calculate the period of time over which ROI was achieved.</inlineHelpText>
        <label>ROI End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Member_Sign_Off_Date__c</fullName>
        <inlineHelpText>(MHI Required Field) Select the date the member reviewed and approved the realization of this value opportunity.</inlineHelpText>
        <label>ROI Member Sign Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Signed_Off_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20150623-9022.</description>
        <label>ROI Signed Off By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity and ROI (ROI Signed Off By)</relationshipLabel>
        <relationshipName>Opportunity_and_ROI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Start_Date__c</fullName>
        <description>Created for CR-20160503-9823.</description>
        <inlineHelpText>The first possible date after a member commits to action/improvement against an identified opportunity that yields a return. The ROI start and end date will be used to calculate the period of time over which ROI was achieved.</inlineHelpText>
        <label>ROI Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Story_Discussed_with_Pod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Story Discussed with Pod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Story_Submission_to_C_Study_R_Table__c</fullName>
        <label>ROI Story Submission to C/Study R/Table</label>
        <type>Date</type>
    </fields>
</CustomObject>